resources/webidl2/test/invalid/baseline/legacyiterable.txt
Syntax error at line 2, since `interface LegacyIterable`:
  legacyiterable<long>;
  ^ Missing return type
